testsuite/tests/saks/should_fail/saks_fail019.stderr

saks_fail019.hs:9:1: error:
    • Couldn't match kind ‘a’ with ‘*’
      Expected kind: a -> *
        Actual kind: * -> *
    • In the data type declaration for ‘T’
